Fixed RunGRP logic - it passes all tests now; implemented new display functionality; initial setup for printer is in place now (looks prettier) ~NB